--- a/WebApp/Content/EstilosPropios.css
+++ b/WebApp/Content/EstilosPropios.css
@@ -1,4 +1,8 @@
-﻿svg {
+﻿*{
+    margin:0px;
+    padding:0px;
+}
+svg {
     width: 100%;
     display: block;
 }
@@ -60,9 +64,7 @@
 
 /* Center website */
 .mainPortfolio {
-    max-width: 1000px;
     margin: auto;
-    background-color: #f1f1f1;
     padding: 20px;
     font-family: Arial;
 }
