--- a/WebApp/Site.Master
+++ b/WebApp/Site.Master
@@ -39,7 +39,7 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div runat="server" class="navbar navbar-inverse navbar-fixed-top" id="divMaster">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
+                    <a class="navbar-brand" runat="server" href="~/">Proyecto DonAr</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -58,8 +58,7 @@
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Register">Registrarse</a></li>
-                                <li><a runat="server" href="~/Account/Login">Iniciar sesión</a></li>
+                                <li><a runat="server" data-toggle="modal" data-target="#myModal" href="#">Iniciá sesión o Registrate</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
@@ -74,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="container body-content">
+        <div class="container-fluid body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
@@ -82,8 +81,16 @@
                 <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
             </footer>
         </div>
+          <div class="modal fade" id="myModal" role="dialog" style="align-content:center">
+    <div class="modal-dialog" style="height:650px; width:550px;">
+    
+      <!-- Modal content-->
+      <iframe src="Account/Login.aspx" style="height:100%; width:100%; border:none"></iframe>
+      
+    </div>
+  </div>
     </form>
 </body>
 </html>
 <script src="Scripts/progressbar.js"></script>
-<script src="Scripts/Portfolio.js"></script>
+
