--- a/WebApp/Site.Master
+++ b/WebApp/Site.Master
@@ -1,10 +1,12 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="WebApp.SiteMaster" %>
 
+<%@ Register Src="~/Account/OpenAuthProviders.ascx" TagPrefix="uc1" TagName="OpenAuthProviders" %>
 <!DOCTYPE html>
 
 <html lang="es">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
@@ -12,12 +14,92 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
     <link href="Content/EstilosPropios.css" rel="stylesheet" />
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" />
+    <link href="Content/Login.css" rel="stylesheet" />
 
 </head>
 <body>
+
     <form runat="server">
+
+
+        <div class="modal fade" id="myModal" role="dialog" style="align-content: center">
+            <div id="login" class="bodyLogin modal-dialog" style="height: 650px; width: 550px;">
+                <fieldset class="clearfix">
+                    <div class="centrado">
+                        <table>
+                            <tr>
+                                <td>
+                                    <p>
+                                        <span class="fontawesome-user"></span>
+                                        <asp:TextBox runat="server" ID="Email" CssClass="form-control" TextMode="Email" />
+                                        <asp:RequiredFieldValidator Display="Dynamic" runat="server" ControlToValidate="Email"
+                                            CssClass="text-danger" ErrorMessage="El campo de correo electrónico es obligatorio." />
+                                        <%--<input runat="server" type="text" value="Username" onblur="if(this.value == '') this.value = 'Username'" onfocus="if(this.value == 'Username') this.value = ''" required>--%>
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <!-- JS because of IE support; better: placeholder="Username" -->
+                                    <p>
+                                        <span class="fontawesome-lock"></span>
+                                        <%--<input type="password" value="Password" onblur="if(this.value == '') this.value = 'Password'" onfocus="if(this.value == 'Password') this.value = ''" required>--%>
+                                        <asp:TextBox runat="server" ID="Password" TextMode="Password" CssClass="form-control" />
+                                        <asp:RequiredFieldValidator Display="Dynamic" runat="server" ControlToValidate="Password" CssClass="text-danger" ErrorMessage="El campo de contraseña es obligatorio." />
+                                    </p>
+                                    <!-- JS because of IE support; better: placeholder="Password" -->
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <asp:PlaceHolder runat="server" ID="ErrorMessage" Visible="false">
+                                        <p class="text-danger">
+                                            <asp:Literal runat="server" ID="FailureText" />
+                                        </p>
+                                    </asp:PlaceHolder>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="checkbox">
+                                        <asp:CheckBox runat="server" ID="RememberMe" />
+                                        <asp:Label runat="server" AssociatedControlID="RememberMe">¿Recordar cuenta?</asp:Label>
+                                    </div>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>
+                                        <asp:Button runat="server" OnClick="LogIn" Text="Iniciar sesión" CssClass="btn btn-default" />
+
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <section id="socialLoginForm">
+                                        <uc1:OpenAuthProviders runat="server" ID="OpenAuthLogin" />
+                                    </section>
+                                </td>
+                            </tr>
+                        </table>
+                        <p>
+                            <asp:HyperLink runat="server" ID="RegisterHyperLink" ViewStateMode="Disabled">Registrarse como usuario nuevo</asp:HyperLink>
+                        </p>
+                    </div>
+                </fieldset>
+
+                <!-- Modal content-->
+            </div>
+        </div>
+
+
+
         <asp:ScriptManager runat="server">
             <Scripts>
                 <%--Para obtener más información sobre la unión de scripts en ScriptManager, consulte https://go.microsoft.com/fwlink/?LinkID=301884 --%>
@@ -81,16 +163,28 @@
                 <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
             </footer>
         </div>
-          <div class="modal fade" id="myModal" role="dialog" style="align-content:center">
-    <div class="modal-dialog" style="height:650px; width:550px;">
-    
-      <!-- Modal content-->
-      <iframe src="Account/Login.aspx" style="height:100%; width:100%; border:none"></iframe>
-      
-    </div>
-  </div>
+
     </form>
 </body>
 </html>
+<script type="text/javascript">
+    window.closeModal = function () {
+        $('#myModal').modal('hide');
+    };
+
+    $(document).ready(function () {
+        $('#Email').blur(function () { if (this.value == '') this.value = 'Email' });
+        $('#Email').focus(function () { if (this.value == 'Email') this.value = '' });
+
+        //$("#Password").val("12345678");
+        $('#Email').blur(function () { if (this.value == '') this.value = '12345678' });
+        $('#Email').focus(function () { if (this.value == '12345678') this.value = '' });
+
+    });
+
+    //$(document).ready(function() {
+    //    $('#divLogin').load("Account/Login.aspx");
+    //});
+</script>
 <script src="Scripts/progressbar.js"></script>
 
