--- a/WebApp/Content/Login.css
+++ b/WebApp/Content/Login.css
@@ -20,13 +20,13 @@
 
 /* ---------- GENERAL ---------- */
 
-body {
+/*body {
 	background-color: #2c3338;
 	color: #606468;
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 14px;
 	line-height: 1.5em;
-}
+}*/
 
 a {
 	color: #eee;
@@ -37,7 +37,7 @@ a:hover {
 	text-decoration: underline;
 }
 
-input {
+#login input {
 	border: none;
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 14px;
@@ -50,7 +50,9 @@ p {
 	line-height: 1.5em;
 }
 
-.clearfix { *zoom: 1; } /* For IE 6/7 */
+.clearfix {
+    *zoom: 1;
+} /* For IE 6/7 */
 .clearfix:before, .clearfix:after {
 	display: table;
 	content: "";
@@ -60,11 +62,17 @@ p {
 /* ---------- LOGIN ---------- */
 
 #login {
-	margin: 50px auto;
-	width: 280px;
+    background-color: #2c3338;
+    color: #606468;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5em;
+    margin: 50px auto;
+    width: 280px;
+    text-align: center;
 }
 
-#login form span {
+#login span {
 	background-color: #363b41;
 	border-radius: 3px 0px 0px 3px;
 	-moz-border-radius: 3px 0px 0px 3px;
@@ -78,11 +86,11 @@ p {
 	width: 50px;
 }
 
-#login form input {
+#login input {
 	height: 50px;
 }
 
-    #login form input[type="text"], input[type="password"], input[type="email"] {
+    #login input[type="text"], input[type="password"], input[type="email"] {
         background-color: #3b4148;
         border-radius: 0px 3px 3px 0px;
         -moz-border-radius: 0px 3px 3px 0px;
@@ -93,7 +101,7 @@ p {
         width: 198px;
     }
 
-#login form input[type="submit"] {
+#login input[type="submit"] {
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
@@ -101,11 +109,11 @@ p {
 	color: #eee;
 	font-weight: bold;
 	margin-bottom: 2em;
-	text-transform: uppercase;
+	/*text-trans: uppercase;*/
 	width: 280px;
 }
 
-#login form input[type="submit"]:hover {
+#login input[type="submit"]:hover {
 	background-color: #d44179;
 }
 
@@ -116,3 +124,11 @@ p {
 #login > p span {
 	padding-left: 5px;
 }
+div.centrado {
+    text-align: center;
+}
+
+    div.centrado table {
+        margin: 0 auto;
+        text-align: left;
+    }
